@@ -1,4 +1,4 @@
-.TH "VCD2FST" "1" "3.2.2" "Anthony Bybell" "Filetype Conversion"
+.TH "VCD2FST" "1" "3.3.35" "Anthony Bybell" "Filetype Conversion"
 .SH "NAME"
 .LP 
 vcd2fst \- Converts VCD files to FST files
@@ -25,6 +25,10 @@ Indicates that the entire file should be run through gzip on close.  This
 results in much smaller files at the expense of a one-time decompression
 penalty on file open during reads.
 .TP 
+\fB\-p,\-\-parallel\fR
+Indicates that parallel mode should be enabled.  This spawns a worker thread
+to continue with FST block processing while conversion continues on the main thread for new FST block data.
+.TP
 \fB\-h,\-\-help\fR
 Show help screen.
 .TP 
